--- a/public/1.html
+++ b/public/1.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Simple HTML Page</title>
-    </html>
+    </head>
     <body>
         <h1>Welcome to My Website</h1>
         <p>This is a simple HTML document without CSS and JavaScript.</p>
