--- a/public/1.html
+++ b/public/1.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <h1>Welcome to My Website</h1>
-        <p>This is a simple HTML document without CSS and JavaScript.</p>
+        <p>This is a simple HTML document without CSS and JavaScript</p>
     </body>
 </html>
